--- a/app/src/main/res/layout/activity_linear_layout.xml
+++ b/app/src/main/res/layout/activity_linear_layout.xml
@@ -46,13 +46,13 @@
         android:layout_marginTop="20dp">
 
         <View
-            android:layout_width="0"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#ccffcc" />
 
         <View
-            android:layout_width="0"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#004d00" />
