主题色 要改改

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="textview" />
+
+        <Button
+            android:id="@+id/btn_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="button" />
+
     </LinearLayout>
 
 </ScrollView>
