--- a/app/src/main/res/drawable/bg_edit_input.xml
+++ b/app/src/main/res/drawable/bg_edit_input.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:color="#ffc34d" />
+    <stroke android:color="#333300" android:width="1dp"/>
     <corners android:radius="5dp" />
 </shape>
