--- a/app/src/main/res/layout/activity_button.xml
+++ b/app/src/main/res/layout/activity_button.xml
@@ -42,4 +42,17 @@
         android:background="@drawable/bg_btn_4"
         android:text="按钮4"
         android:textSize="20sp" />
+
+<!--    <com.google.android.material.button.MaterialButton-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_below="@id/btn_4"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:backgroundTint="#ffffff"-->
+<!--        android:text="MaterialButton"-->
+<!--        android:textColor="#000000"-->
+<!--        android:textSize="20sp"-->
+<!--        app:cornerRadius="5dp"-->
+<!--        app:strokeColor="#ff0000"-->
+<!--        app:strokeWidth="1dp" />-->
 </RelativeLayout>
