--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,13 @@
             android:textAllCaps="false"/>
 
         <Button
+            android:id="@+id/btn_con"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ContraintLayout"
+            android:textAllCaps="false"/>
+
+        <Button
             android:id="@+id/btn_tv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
